invokeOperation
import java.util.*;
import java.lang.reflect.*;

class invokeOperation{
    public static void main(String args[]) throws 
    NoSuchMethodException,IllegalAccessException,
    InvocationTargetException
    {
     invokeOperation io = new invokeOperation();
        
        final String[] OPERATION_LIST = {"add","sub","div","mul","cos" };
        
        String condition = io.getCondition();
   
      for (String op : OPERATION_LIST) { 
        if (condition.equals(op)){ 
            io.getClass().getMethod(op).invoke(this); 
        }else{ 
        break; 
        }
      }
    }
    
    public static String getCondition(){
      /* need a loop to return either 
     add,subtract,division,multiplication
     and then perform 
     add,subtract,division,multiplication 
     of 2 numbers.
     */
             
      return "add"; // when add is called and then perform addition
      //return "sub"; // when sub is called and then perform subtraction
      //return "div"; // when div is called and then perform division
      //return "mul"; // when mul is called and then perform multiplication.
    }  
} 

/*
Main.java:18: error: non-static variable this cannot be referenced from a static context
 io.getClass().getMethod(op).invoke(this); 
^ 1 error
*/
